force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Comments_Issues__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Comments_Issues__c</fullName>
    <label>Comments/Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>