force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Date__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>