force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Fields_to_display__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Fields_to_display__c</fullName>
    <label>Fields to display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>