force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Group__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Group__c</fullName>
    <label>Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>