force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Group_Ranking__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Group_Ranking__c</fullName>
    <label>Group Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>