force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__is_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__is_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is File Uploaded</label>
    <type>Checkbox</type>
</CustomField>