force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__label__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>