force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>