force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Show_Upload__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Show_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload</label>
    <type>Checkbox</type>
</CustomField>