force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Status__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>High Priority</fullName>
                <isActive>false</isActive>
                <label>High Priority</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>