force-app/main/default/objects/P3_CheckList__Checklist_Item__c/fields/P3_CheckList__Status_To_Display__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Status_To_Display__c</fullName>
    <label>Status To Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>