force-app/main/default/objects/P3_CheckList__Checklist_Item__c/listViews/P3_CheckList__All.listView-meta.xml
<ListView>
    <fullName>P3_CheckList__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>